hphp/test/slow/dom_document/DOMDocument_saveHTML_error2.php.expectf

Warning: saveHTML() expects parameter 1 to be object, boolean given in %s on line 7

Fatal error: Non-static method DOMDocument::saveHTML() cannot be called statically in %s on line 8
